--- a/package.json
+++ b/package.json
@@ -1,11 +1,32 @@
 {
-  "name": "sp500",
+  "name": "sp500-stock-analysis",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "axios": "^0.21.4",
+    "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.1",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
+    "winston": "^3.3.3",
+    "yahoo-finance2": "^2.3.10"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "nodemon": "^2.0.12",
+    "typescript": "^5.6.3",
+    "vite": "^4.2.0"
+  }
 }
