--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "express": "^4.17.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
     "winston": "^3.3.3",
+    "xlsx": "^0.18.5",
     "yahoo-finance2": "^2.3.10"
   },
   "devDependencies": {
